# wasmex

./: .gitignore  .gitmodules  .mix_tasks  .tool-versions  CHANGELOG.md  LICENSE.md  README.md  mix.exs
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: compatibility-elixir.yaml  compatibility-elixir.yml  elixir-ci.yaml  elixir-ci.yml  release.yaml  release.yml  rust-ci.yaml  rust-ci.yml
benchmarks/: concurrent_io_benchmark.exs  massive_scale_benchmark.exs  performance_suite.exs
config/: config.exs
docs/: release.md
lib/: wasmex.ex
lib/mix/tasks/: wasmex.build_fixtures.ex
lib/wasmex/: callback_token.ex  component.ex  component_instance.ex  component_store.ex  components.ex  engine.ex  engine_config.ex  epoch.ex  instance.ex  memory.ex  module.ex  native.ex  pipe.ex  store.ex  store_limits.ex  store_or_caller.ex  utils.ex  wat.ex
lib/wasmex/components/: component.ex  component_instance.ex  component_server.ex  component_store.ex  field_converter.ex  function_server.ex  guest_resource.ex  resource_behaviour.ex  resource_component.ex  resource_component_server.ex  resource_manager.ex  (+2 more)
native/wasmex/: .gitignore  Cargo.toml  README.md  test_native_wit.exs  todo-list.wit
native/wasmex/.cargo/: config
native/wasmex/src/: atoms.rs  caller.rs  component.rs  component_instance.rs  component_type_conversion.rs  engine.rs  environment.rs  exec_func.rs  functions.rs  host_resource.rs  instance.rs  lib.rs  memory.rs  module.rs  namespace.rs  pipe.rs  printable_term_type.rs  resource_methods.rs  resource_registry.rs  store.rs  store_limits.rs  task.rs  todo.rs  todo_list.rs  wasi_resource.rs  wat.rs  wit.rs
native/wasmex/src/component/: instance.rs  mod.rs  resource.rs  type_conversion.rs
native/wasmex/src/memory/: mod.rs
test/: component_exported_interface_test.exs  component_type_conversions_test.exs  test_helper.exs  wasi_test.exs  wasm_component_types_test.exs  wasm_components_test.exs  wasm_link_test.exs  wasmex_test.exs  wat_test.exs
test/component_fixtures/: hello_world.ex  hello_world_no_conversion.ex
test/component_fixtures/counter-component/: Cargo.toml  build.sh
test/component_fixtures/counter-component/src/: bindings.rs  lib.rs
test/component_fixtures/counter-component/wit/: world.wit
test/components/: component_genserver_test.exs  component_server_test.exs  component_test.exs  component_types_test.exs  components_test.exs  exported_interface_test.exs  filesystem_resource_test.exs  guest_resource_discovery_test.exs  guest_resource_otp_test.exs  guest_resource_test.exs  host_resource_patterns_test.exs  host_resource_test.exs  import_test.exs  resource_server_test.exs  resource_test.exs  server_test.exs  test.exs  type_conversions_test.exs  wasi_integration_test.exs  wasi_interface_test.exs  wasi_test.exs  wit_parser_test.exs
test/example_wasm_files/: README.md  globals.wasm  globals.wat  simple.wasm  simple.wat
test/fixture_projects/: cpu_intensive.wat
test/fixture_projects/component_type_conversions/: Cargo.toml
test/fixture_projects/component_type_conversions/src/: bindings.rs  lib.rs
test/fixture_projects/component_type_conversions/wit/: world.wit
test/fixture_projects/component_types/: .gitignore  Cargo.toml  README.md
test/fixture_projects/component_types/.zed/: settings.json
test/fixture_projects/component_types/src/: lib.rs
test/fixture_projects/component_types/wit/: world.wit
test/fixtures/: basic.wat  blocking_io.wat  memory.wat  wasi_hello.wat
test/support/: filesystem_sandbox.ex  todo_list.ex
test/support/todo_list/: Cargo.toml  other_todo_list.js
test/support/todo_list/.cargo/: config.toml
test/support/todo_list/src/: lib.rs
test/wasi_test/: Cargo.toml  README.md
test/wasm_import_test/: Cargo.toml
test/wasm_link_import_test/: Cargo.toml
test/wasm_link_test/: Cargo.toml
test/wasm_source/: Cargo.toml
test/wasm_test/: Cargo.toml
test/wasmex/: engine_config_test.exs  engine_test.exs  instance_test.exs  memory_test.exs  module_test.exs  pipe_test.exs  store_or_caller_test.exs  store_test.exs
(+63 files in other folders)
