[package]
name = "wasmex"
version = "0.13.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
description = "Elixir extension to run WebAssembly binaries through wasmtime"
readme = "README.md"
repository = "https://github.com/tessi/wasmex"
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "wasmex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rand = "0.9.1"
rustler = { version = "0.36.2", features = ["big_integer", "serde"] }
tokio = { version = "1.42", features = ["full"] }
wasi-common = "37.0.1"
wasmtime = "35.0.0"
wasmtime-wasi = "35.0.0"
wasmtime-wasi-http = "35.0.0"
wat = "1.238.1"
wiggle = "35.0.0"
wit-parser = "0.236.0"
