[package]
name = "wasmex"
version = "0.13.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
description = "Elixir extension to run WebAssembly binaries through wasmtime"
readme = "README.md"
repository = "https://github.com/tessi/wasmex"
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "wasmex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rand = "0.9.1"
rustler = { version = "0.37.0", features = ["big_integer", "serde"] }
tokio = { version = "1.48", features = ["full"] }
wasi-common = "35.0.0"
wasmtime = "35.0.0"
wasmtime-wasi = "38.0.4"
wasmtime-wasi-http = "35.0.0"
wat = "1.240.0"
wiggle = "35.0.0"
wit-parser = "0.236.0"
