[package]
name = "wasmex"
version = "0.14.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
description = "Elixir extension to run WebAssembly binaries through wasmtime"
readme = "README.md"
repository = "https://github.com/tessi/wasmex"
keywords = ["elixir", "extension", "webassembly", "wasmtime"]
categories = ["wasm"]
edition = "2021"

[lib]
name = "wasmex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rand = "0.9.1"
rustler = { version = "0.37.2", features = ["big_integer", "serde"] }
tokio = { version = "1.48", features = ["full"] }
wasi-common = "39.0.1"
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"
wasmtime-wasi-http = "40.0.0"
wat = "1.243.0"
wiggle = "39.0.1"
wit-parser = "0.243.0"
