[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "todo_list"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.34", features = ["big_integer"] }
wasmex = { path = "/Users/superchris/dev/wasmex/native/wasmex" }
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"
